--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,31 +1,9 @@
 trigger:
-  branches:
-    exclude:
-      - '*'
+- main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '14.x'
-  displayName: 'Install Node.js'
-
-- script: |
-    npm install
-    npm run build
-  displayName: 'Install and build'
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    pathtoPublish: 'dist'
-    artifactName: 'drop'
-    publishLocation: 'Container'
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(Build.BinariesDirectory)'
-    includeRootFolder: false
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
+- script: echo Hello, World!
+  displayName: 'Print Hello, World!'
